--- a/reference/Uno.Extensions.Commerce/Commerce.UITest/Commerce.UITest.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.UITest/Commerce.UITest.csproj
@@ -6,12 +6,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="NUnit" Version="3.13.3" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-		<PackageReference Include="Uno.UITest.Helpers" Version="1.1.0-dev.32" />
-		<PackageReference Include="Xamarin.UITest" Version="3.2.8" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk"  />
+		<PackageReference Include="Newtonsoft.Json"  />
+		<PackageReference Include="NUnit"  />
+		<PackageReference Include="NUnit3TestAdapter"  />
+		<PackageReference Include="Uno.UITest.Helpers"  />
+		<PackageReference Include="Xamarin.UITest"  />
 	</ItemGroup>
 
 </Project>
