--- a/reference/Uno.Extensions.Commerce/Directory.Packages.props
+++ b/reference/Uno.Extensions.Commerce/Directory.Packages.props
@@ -11,7 +11,7 @@
     <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageVersion Include="NUnit" Version="3.13.2" />
-    <PackageVersion Include="NUnit3TestAdapter" Version="4.0.0" />
+    <PackageVersion Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.2" />
     <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.2" />
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
@@ -41,18 +41,18 @@
     <PackageVersion Include="Uno.Material.WinUI" Version="2.4.0-dev.42" />
     <PackageVersion Include="Uno.Toolkit.WinUI" Version="2.4.0-dev.99" />
     <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version=" 2.4.0-dev.99" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.0-dev.962" />
+    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
     <PackageVersion Include="Uno.UITest.Helpers" Version="1.1.0-dev.32" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.3" />
     <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.3" />
-    <PackageVersion Include="Uno.WinUI" Version="4.6.0-dev.962" />
-    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.6.0-dev.962" />
-    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.6.0-dev.962" />
-    <PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.6.0-dev.962" />
-    <PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="4.6.0-dev.962" />
-    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="4.6.0-dev.962" />
+    <PackageVersion Include="Uno.WinUI" Version="4.6.18" />
+    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.6.18" />
+    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.6.18" />
+    <PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.6.18" />
+    <PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="4.6.18" />
+    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="4.6.18" />
     <PackageVersion Include="Xamarin.Google.Android.Material" Version="1.4.0.4" />
-    <PackageVersion Include="Xamarin.UITest" Version="3.2.6" />
+    <PackageVersion Include="Xamarin.UITest" Version="3.2.8" />
   </ItemGroup>
 </Project>
