--- a/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -40,6 +40,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI.Markup" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material.Markup" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
