--- a/UI/TimeEntry/TimeEntryUno/TimeEntryUno.Wasm/TimeEntryUno.Wasm.csproj
+++ b/UI/TimeEntry/TimeEntryUno/TimeEntryUno.Wasm/TimeEntryUno.Wasm.csproj
@@ -1,21 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
-  </PropertyGroup>
+		
+	</PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <MonoRuntimeDebuggerEnabled>true</MonoRuntimeDebuggerEnabled>
     <DefineConstants>$(DefineConstants);TRACE;DEBUG</DefineConstants>
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    <!--
+		IL Linking is disabled in Debug configuration.
+		When building in Release, see https://platform.uno/docs/articles/features/using-il-linker-webassembly.html
+		-->
+    <WasmShellILLinkerEnabled>false</WasmShellILLinkerEnabled>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Assets\SplashScreen.png" />
   </ItemGroup>
   <ItemGroup>
-    <UpToDateCheckInput Include="..\TimeEntryUno.Shared\**\*.xaml" />
+    <UpToDateCheckInput Include="..\TimeEntry.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="WasmCSS\Fonts.css" />
@@ -26,26 +31,29 @@
   </ItemGroup>
   <ItemGroup>
     <!--
-    This item group is required by the project template because of the
-    new SDK-Style project, otherwise some files are not added automatically.
+		This item group is required by the project template because of the
+		new SDK-Style project, otherwise some files are not added automatically.
 
-    You can safely remove this ItemGroup completely.
-    -->
+		You can safely remove this ItemGroup completely.
+		-->
     <None Include="Program.cs" />
     <None Include="LinkerConfig.xml" />
     <None Include="wwwroot\web.config" />
   </ItemGroup>
-  <ItemGroup> 
-    <PackageReference Include="IdentityModel" Version="5.0.1" /> 
-    <PackageReference Include="System.Text.Json" Version="6.0.2" /> 
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.0.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.1.9" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="4.1.9" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.1.9" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.2.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.2.0" />
+  <ItemGroup>
+	<PackageReference Include="IdentityModel" Version="6.0.0" />
+	<PackageReference Include="System.Text.Json" Version="6.0.2" />
+	<PackageReference Include="Microsoft.Windows.Compatibility" />	
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+    <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.3" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.3" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
   </ItemGroup>
-  <Import Project="..\TimeEntryUno.Shared\TimeEntryUno.Shared.projitems" Label="Shared" Condition="Exists('..\TimeEntryUno.Shared\TimeEntryUno.Shared.projitems')" />
+  <Import Project="..\TimeEntry.Shared\TimeEntry.Shared.projitems" Label="Shared" Condition="Exists('..\TimeEntry.Shared\TimeEntry.Shared.projitems')" />
+  <Import Project="..\TimeEntryUno.Shared\TimeEntryUno.Shared.projitems" Label="Shared" />
 </Project>
