--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Gtk/UnoCupertinoSample.Skia.Gtk.csproj
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Skia.Gtk/UnoCupertinoSample.Skia.Gtk.csproj
@@ -1,27 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
-    <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup Condition="exists('..\UnoCupertinoSample.Windows')">
-    <EmbeddedResource Include="..\UnoCupertinoSample.Windows\Package.appxmanifest" LogicalName="Package.appxmanifest" />
-    <Content Include="..\UnoCupertinoSample.Windows\Images\StoreLogo.png" Link="Assets\StoreLogo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Assets\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <UpToDateCheckInput Include="..\UnoCupertinoSample.Shared\**\*.xaml" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
-    <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
-  </ItemGroup>
-  <Import Project="..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems" Label="Shared" />
+	<PropertyGroup>
+		<OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
+		<OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+	</PropertyGroup>
+	<ItemGroup Condition="exists('..\UnoCupertinoSample.Windows')">
+		<EmbeddedResource Include="..\UnoCupertinoSample.Windows\Package.appxmanifest" LogicalName="Package.appxmanifest" />
+		<Content Include="..\UnoCupertinoSample.Windows\Images\StoreLogo.png" Link="Assets\StoreLogo.png" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="Assets\**" />
+	</ItemGroup>
+	<ItemGroup>
+		<UpToDateCheckInput Include="..\UnoCupertinoSample.Shared\**\*.xaml" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.6.19" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Cupertino" Version="2.3.0" />
+		<PackageReference Include="Uno.Cupertino.WinUI" Version="2.3.0" />
+
+	</ItemGroup>
+	<Import Project="..\UnoCupertinoSample.Shared\UnoCupertinoSample.Shared.projitems" Label="Shared" />
 </Project>
