--- a/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF/UnoMaterialSample.Skia.WPF.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Skia.WPF/UnoMaterialSample.Skia.WPF.csproj
@@ -4,8 +4,6 @@
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
-	<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-	<CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>  
   </PropertyGroup>
   <ItemGroup Label="AssemblyInfo">
     <AssemblyAttribute Include="System.Runtime.InteropServices.ComVisibleAttribute">
@@ -19,17 +17,16 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
+	<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
 	<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
     <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
     <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-  </ItemGroup>
-  <ItemGroup>
-    <UpToDateCheckInput Include="..\UnoMaterialSample.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
