--- a/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Wasm/UnoMaterialSample.Wasm.csproj
@@ -41,15 +41,17 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
+	<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
 	<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />  
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.3" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.3" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.7" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.7" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
   </ItemGroup>
   <Import Project="..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems" Label="Shared" Condition="Exists('..\UnoMaterialSample.Shared\UnoMaterialSample.Shared.projitems')" />
