--- a/reference/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -48,6 +48,7 @@
     <PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.64" />
     <PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.64" />
     <PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.115" />
+	<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.4.0-dev.64" />
     <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
     <PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.13" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.0-dev.158" />
