--- a/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -39,6 +39,7 @@
 		<PackageReference Include="Uno.Material.WinUI" Version="2.4.0-dev.64" />
 		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.64" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.115" />
+		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.4.0-dev.64" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.114" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.13" />
 
