--- a/reference/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -23,6 +23,7 @@
 		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.4.0-dev.62" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.4.0-dev.114" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.158" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.13" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.240" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.0-dev.240" />
 	</ItemGroup>
