--- a/UI/LocalizationSamples/Localization/UnoLocalization.Windows/UnoLocalization.Windows.csproj
+++ b/UI/LocalizationSamples/Localization/UnoLocalization.Windows/UnoLocalization.Windows.csproj
@@ -27,6 +27,7 @@
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
 
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
@@ -48,8 +49,8 @@
 		the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
 		must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
 		-->
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22000.25" />
-		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.25" />
+		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.28" />
+		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.28" />
 	</ItemGroup>
 	
 	<Import Project="..\UnoLocalization.Shared\UnoLocalization.Shared.projitems" Label="Shared" />
