--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Mobile/WCTDataTreeTabSample.Mobile.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Mobile/WCTDataTreeTabSample.Mobile.csproj
@@ -19,13 +19,13 @@
   </PropertyGroup>
   <ItemGroup>		
 	
-	<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />		
-	  
+	<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
+	<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />  
 	<PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />		
 	<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />		
 	<PackageReference Include="Uno.WinUI" Version="4.6.18" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.18" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
   </ItemGroup>
   <Choose>
