--- a/UI/CameraCaptureUI/CameraCaptureUISample/CameraCaptureUISample.Mobile/Android/AndroidManifest.xml
+++ b/UI/CameraCaptureUI/CameraCaptureUISample/CameraCaptureUISample.Mobile/Android/AndroidManifest.xml
@@ -2,5 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.CameraCaptureUISample" android:versionCode="1" android:versionName="1.0">
   <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
   <application android:label="CameraCaptureUISample"></application>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />	
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-feature
+    android:name="android.hardware.camera"
+    android:required="true" />
 </manifest>
